
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int bits8 ;


 int Assert (int*) ;

void
array_bitmap_copy(bits8 *destbitmap, int destoffset,
      const bits8 *srcbitmap, int srcoffset,
      int nitems)
{
 int destbitmask,
    destbitval,
    srcbitmask,
    srcbitval;

 Assert(destbitmap);
 if (nitems <= 0)
  return;
 destbitmap += destoffset / 8;
 destbitmask = 1 << (destoffset % 8);
 destbitval = *destbitmap;
 if (srcbitmap)
 {
  srcbitmap += srcoffset / 8;
  srcbitmask = 1 << (srcoffset % 8);
  srcbitval = *srcbitmap;
  while (nitems-- > 0)
  {
   if (srcbitval & srcbitmask)
    destbitval |= destbitmask;
   else
    destbitval &= ~destbitmask;
   destbitmask <<= 1;
   if (destbitmask == 0x100)
   {
    *destbitmap++ = destbitval;
    destbitmask = 1;
    if (nitems > 0)
     destbitval = *destbitmap;
   }
   srcbitmask <<= 1;
   if (srcbitmask == 0x100)
   {
    srcbitmap++;
    srcbitmask = 1;
    if (nitems > 0)
     srcbitval = *srcbitmap;
   }
  }
  if (destbitmask != 1)
   *destbitmap = destbitval;
 }
 else
 {
  while (nitems-- > 0)
  {
   destbitval |= destbitmask;
   destbitmask <<= 1;
   if (destbitmask == 0x100)
   {
    *destbitmap++ = destbitval;
    destbitmask = 1;
    if (nitems > 0)
     destbitval = *destbitmap;
   }
  }
  if (destbitmask != 1)
   *destbitmap = destbitval;
 }
}
